<resources>
    <string name="app_name">Direct Foot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strLogin">Login:</string>
    <string name="strPassword">Password:</string>
    <string name="strConnect">CONNECT</string>

    <string name="recherche">Recherche</string>
    <string name="parametres">Parametres</string>
    <string name="accueil">Accueil</string>
    <string name="direct">Direct</string>
    <string name="favoris">Favoris</string>
    <string name="classement">Classement</string>
    <string name="search">search</string>
    <string name="team_1">Team 1</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="team_2">Team 2</string>
    <string name="statut">Terminé</string>
    <string name="score_1">Score</string>
    <string name="score_2">Score</string>
    <string name="imageequipe">imageEquipe</string>

    <string name="equipe_title">Equipes</string>
    <string name="rank_title">Rang</string>

    <!-- Classement -->
    <string name="points">Pts</string>
    <string name="j">J</string>
    <string name="g">G</string>
    <string name="n">N</string>
    <string name="p">P</string>
    <string name="diff_but">+/-</string>
    <string name="bp">BP</string>
    <string name="bc">BC</string>
    <string name="v">V</string>
    <string name="rank">1</string>
    <string name="logo">Logo</string>
    <string name="equipes">Equipes</string>
    <string name="pts">Pts</string>

    <!-- Accueil -->
    <string name="competitions">COMPÉTITIONS</string>


    <!-- Panel des jours -->
    <string name="daysPast7">Ven 12/03</string>
    <string name="daysPast6">Ven 12/03</string>
    <string name="daysPast5">Ven 12/03</string>
    <string name="daysPast4">Ven 12/03</string>
    <string name="daysPast3">Ven 12/03</string>
    <string name="daysPast2">Ven 12/03</string>
    <string name="daysPast1">Mer 10/03</string>

    <string name="today">Aujd</string>

    <string name="daysPlus1">Ven 12/03</string>
    <string name="daysPlus2">Sam 13/03</string>
    <string name="daysPlus3">Dim 14/03</string>
    <string name="daysPlus4">Ven 12/03</string>
    <string name="daysPlus5">Ven 12/03</string>
    <string name="daysPlus6">Ven 12/03</string>
    <string name="daysPlus7">Ven 12/03</string>


    <!-- Recherche -->
    <string name="entrez_votre_recherche_ici">Entrez votre recherche ici</string>
    <string name="equipe_search">EQUIPES</string>
    <string name="tout">TOUT</string>
    <string name="competitions_search">COMPÉTITIONS</string>
    <string name="search_image">search_image</string>
    <string name="result_search_msg">Résultat de la recherche</string>


    <!-- Une Ligue -->
    <string name="ligue_btn">Button</string>
    <string name="logo_ligue">logo_ligue</string>


    <!-- Statistiques d'un match -->
    <string name="possession">Possession</string>
    <string name="tir">Tir</string>
    <string name="tirs_cadr_s">Tirs cadrés</string>
    <string name="passes">Passes</string>
    <string name="pr_cision_des_passes">Précision des passes</string>
    <string name="fautes">Fautes</string>
    <string name="cartons_jaunes">Cartons Jaunes</string>
    <string name="cartons_rouges">Cartons Rouges</string>
    <string name="hors_jeu">Hors-Jeu</string>
    <string name="name_Champ">Ligue 1</string>
    <string name="dateMatch">Mer. 16/03</string>
    <string name="statutMatch">Terminé</string>
    <string name="homeScore">3</string>
    <string name="vs">-</string>
    <string name="awayScore">0</string>
    <string name="no_live_match">Pas de match ce jour</string>


</resources>