<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#43B362"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/daysPast7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast7"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPast6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPast5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPast4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPast3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast3"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPast2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPast1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPast1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus3"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus6"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/daysPlus7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/daysPlus7"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/compet_fav"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:background="#2D1D4A"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            android:id="@+id/name_compet_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1F1430"
            android:text="@string/competitions_favorites"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/compet"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#5192AC"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/compet_fav">

        <TextView
            android:id="@+id/name_compet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#061250"
            android:text="@string/competitions"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>