<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentClassementLigue"
    android:layout_marginTop="20dp"

    >



    <LinearLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/equipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equipes"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pts"
            android:textColor="@color/white"

            android:textSize="14sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"

        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/contentD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/match_joue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/match_gagne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/v"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/match_nul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/n"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/match_perdu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/p"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/but_pour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bp"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="14sp" />

            <TextView
                android:id="@+id/but_contre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bc"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="14sp" />

            <TextView
                android:id="@+id/diff_but"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diff_but"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>