<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="#604E4E"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/match_joue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/j"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/match_gagne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/v"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/match_nul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/n"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/match_perdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/p"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/but_pour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/bp"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/but_contre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/bc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/diff_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/diff_but"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>