<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/item_bc"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="#6D716B"
                android:ems="15"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/entrez_votre_recherche_ici"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/search_image"
                app:srcCompat="@drawable/search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_recherche"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/item_bc"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_all"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/tout"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/equipe_search"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/equipe_search"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/compet_search"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/competitions_search"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ligue_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_ligue"
            android:maxHeight="125dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logoenconstruction" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>