<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="#604E4E"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/rank"
            android:textAlignment="center"

            android:textSize="14sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/Equipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/equipe"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd ="0dp"
            android:layout_weight="1"
            android:text="@string/points"

            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>